--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   "ajenti-0.6.1.tar.gz:"	ff81293ddc41aa9dced263ab89e9f1c6935e0cda
+  ajenti-1.2.22.tar.gz: 320544e2007665da094c1a7ecc955107d331fc2a
